tests/compile-fail/06-tuple-destruct-empty.rs
use graph::workflow;
use namu as graph;

#[workflow]
fn tuple_destruct_empty() {
    let () = ();
}

fn main() {}
